# poll-log-console

./: .gitignore  COPYING.short  README.md  README.pt-BR.md  README.tok.md  SPEC.md  package.json  pyproject.toml
adapters/alpine/: README.md
adapters/fastapi/: README.md
adapters/flask/: README.md
adapters/htmx/: README.md
adapters/lwan/: README.md
adapters/vanilla/: README.md
examples/alpine-standalone/: index.html
examples/cpm-term/: README.md  app.py
examples/echo-lab/: README.md  app.py
examples/fastapi-app/: app.py
examples/flask-app/: app.py
examples/htmx-poll/: README.md
examples/lwan/: index.html  logs.cgi
examples/net-status/: README.md  app.py
examples/simple-css/: README.md  app.py
examples/vanilla-standalone/: index.html  mock-logs.json
examples/water-css/: README.md  app.py
harness/: README.md  capture_media.py  run.sh  smoke_test.py
src/css/: dos-audit-console.css
src/html/: widget.alpine.html  widget.fragment.html
src/js/: index.js
src/js/adapters/: alpine.js  htmx.js  vanilla.js
src/js/core/: commands.js  poller.js  sound.js  store.js
src/python/dos_audit/: __init__.py  buffer.py  fastapi_router.py  flask_blueprint.py  middleware_asgi.py  middleware_wsgi.py  schema.py
tests/e2e/: test_console_group_d.md
tests/python/: test_buffer.py
