[project]
name = "dos-audit"
version = "0.1.0"
description = "Python LogBuffer + Flask/FastAPI adapters for dos-audit-console"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
flask = ["flask>=3"]
fastapi = ["fastapi>=0.110"]

[tool.setuptools.packages.find]
where = ["src/python"]
