[project]
name = "dos-audit"
version = "0.1.0"
description = "Python LogBuffer + Flask/FastAPI adapters for poll-log-console"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = []

[project.optional-dependencies]
flask = ["flask>=3"]
fastapi = ["fastapi>=0.110"]

[tool.setuptools.packages.find]
where = ["src/python"]
